# nn-ate

./: .gitignore  .gitmodules  AGENTS.md  README.md  chernovik.py  pyproject.toml  run_binder_comparisson_sequential.ps1
data/CL-RuTerm3/for_final_evaluation/: test2_t12_v2.jsonl  test2_t3_v2.jsonl  test_all_domains_v2.jsonl
data/CL-RuTerm3/inference/: test_t1_candidates_BINDER_DeepPavlov_lr2e-05_seed34.jsonl  test_t1_candidates_BINDER_Kaggle_ruroberta_large_msl192_lr3e-05_ga8_seed38_cp3600.jsonl  test_t1_candidates_BINDER_ruroberta_large_msl352_lr1e-05_ga4_seed34_cp690.jsonl  test_t1_candidates_BINDER_seed33_1.jsonl  test_t1_candidates_DeepPavlov_rubert-base-cased_candpre_len384_lr0.0001_bs64_ga4_ep15.0_seed42-3960.jsonl  test_t1_candidates_DeepPavlov_rubert-base-cased_candpre_len384_lr2e-05_bs128_ga4_ep2.3_seed42-424.jsonl  test_t1_candidates_ai-forever_ruBert-base_candpre_len384_lr2e-05_bs64_ga4_ep14.0_seed42-3136.jsonl  (+3 more)
src/common/: combine_prediction_jsonl.py  rutermeval_score.py  score_inference_dirs.py  threshold_sweep.py  utils.py
src/nn_ate/: 1st_try.py  BIO-BILOU-comparison.py  _utils.py  bert_getters.py  binder_full_train_kaggle.py  binder_full_train_launcher.py  binder_predict.py  span_classificator.py  span_classificator_predict.py  test_string
src/term_datasets/: CL_RuTerm3.py  CL_RuTerm3_getters.py  _types.py  _utils.py  build_ngram_candidate_jsonl.py  evaluation.py  strip_candidates_from_jsonl.py  text_processing.py
tests/: test_clruterm3_metrics.py  test_combine_prediction_jsonl.py  test_threshold_sweep.py
(+26 files in other folders)
