[project]
name = "nn-ate"
version = "0.1.0"
description = ""
authors = [
    {name = "Chickowar",email = "teisltvg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "datasets (>=4.6.1,<5.0.0)",
    "accelerate (>=1.13.0,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "setuptools (>=80.0.0,<81.0.0)",
    "seqeval (>=1.2.2,<2.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
]

[tool.poetry]
packages = [
    {include = "nn_ate", from = "src"},
    {include = "common", from = "src"},
    {include = "term_datasets", from = "src"},
]

[[tool.poetry.source]]
name = "cuda-121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "cuda-126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[[tool.poetry.source]]
name = "cuda-128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[[tool.poetry.source]]
name = "cuda-130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "cuda-130"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (<7)",
    "jupyterlab (>=4.5.5,<5.0.0)",
    "razdel (>=0.5.0,<0.6.0)"
]
